# ecos-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: ecos_cpp.hpp
test/: test.cpp
